fixed alignment. pushing to test on my phone

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -13,9 +13,14 @@
 
 #sampleText {
   position:relative;
-  top: 200px;
+  top: 75px;
   text-align: center;
-  font-size: 400%;
+/*  font-size: 400%;*/
+  line-height: 0.5;
+  padding: 8px;
+  padding-bottom: 30px;
+  margin: 30px;
+  font-size: 1em;
 }
 
 
@@ -40,13 +45,6 @@
 	width:100%;
 }
 
-#sampleText {
-    line-height: 0.5;
-    padding: 8px;
-    padding-bottom: 30px;
-    margin: 30px;
-    font-size: 1em;
-}
 
 #imageFull {
   height: 550px;
